--- a/admin-chats/index.html
+++ b/admin-chats/index.html
@@ -1,5 +1,12 @@
 <html>
     <body>
-        <script src="index.tsx"></script>
+        <script>
+            window.env = {
+              BACKEND_URL: 'https://dev.itrainyou.heksray.com',
+              WS_HOST: 'wss://dev.itrainyou.heksray.com',
+              AGORA_ID: null
+            }
+        </script>
+        <script src="index.ts"></script>
     </body>
 </html>
