--- a/admin-chats/index.html
+++ b/admin-chats/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>TypeScript + React</title>
+    <link href="https://fonts.googleapis.com/css?family=Roboto+Slab:400,500,600|Roboto:400,500,700,900&display=swap&subset=cyrillic,cyrillic-ext" rel="stylesheet">
     <script>
         window.env = {
           BACKEND_URL: 'https://dev.itrainyou.heksray.com',
