--- a/admin-chats/index.html
+++ b/admin-chats/index.html
@@ -20,6 +20,10 @@
         Создать чат супервизора
     </button>
 
+    <button onclick="createSupportChat(374, 'eyJ0eXAiOiJKV1QiLCJhbGciOiJIUzI1NiJ9.eyJ1c2VyX2lkIjo2LCJ1c2VybmFtZSI6ImFkbWluQGFkbWluLmFkbWluIiwiZXhwIjoxNjAxNTg1MzkyLCJlbWFpbCI6ImFkbWluQGFkbWluLmFkbWluIiwicGFzc3dvcmRfY2hlY2siOiI0YjMxZTczOWQ2ZDM0NDVkZGQwMDhlYmMwMDkxNzcxNzgzOThlNjBlNzhlNjYzMjYxYjUyN2QxMmI3YjE2OTQ4In0.OpomupR6D6x1QJHB378X6g2FXTkWL5oUuvV3gK7K2po')">
+        Создать чат саппорта
+    </button>
+
 </div>
 </body>
 </html>
