--- a/admin-chats/index.html
+++ b/admin-chats/index.html
@@ -6,21 +6,15 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>TypeScript + React</title>
     <link href="https://fonts.googleapis.com/css?family=Roboto+Slab:400,500,600|Roboto:400,500,700,900&display=swap&subset=cyrillic,cyrillic-ext" rel="stylesheet">
-    <script>
-        window.env = {
-          BACKEND_URL: 'https://dev.itrainyou.heksray.com',
-          WS_HOST: 'wss://dev.itrainyou.heksray.com'
-        }
-    </script>
 </head>
 <body>
 <div id="root">
 
-    <button onclick="createSupervisorChat(205, 'eyJ0eXAiOiJKV1QiLCJhbGciOiJIUzI1NiJ9.eyJ1c2VyX2lkIjo2LCJ1c2VybmFtZSI6ImFkbWluQGFkbWluLmFkbWluIiwiZXhwIjoxNjAxNTg1MzkyLCJlbWFpbCI6ImFkbWluQGFkbWluLmFkbWluIiwicGFzc3dvcmRfY2hlY2siOiI0YjMxZTczOWQ2ZDM0NDVkZGQwMDhlYmMwMDkxNzcxNzgzOThlNjBlNzhlNjYzMjYxYjUyN2QxMmI3YjE2OTQ4In0.OpomupR6D6x1QJHB378X6g2FXTkWL5oUuvV3gK7K2po')">
+    <button onclick="createSupervisorChat(205, 'eyJ0eXAiOiJKV1QiLCJhbGciOiJIUzI1NiJ9.eyJ1c2VyX2lkIjo2LCJ1c2VybmFtZSI6ImFkbWluQGFkbWluLmFkbWluIiwiZXhwIjoxNjAxNTg1MzkyLCJlbWFpbCI6ImFkbWluQGFkbWluLmFkbWluIiwicGFzc3dvcmRfY2hlY2siOiI0YjMxZTczOWQ2ZDM0NDVkZGQwMDhlYmMwMDkxNzcxNzgzOThlNjBlNzhlNjYzMjYxYjUyN2QxMmI3YjE2OTQ4In0.OpomupR6D6x1QJHB378X6g2FXTkWL5oUuvV3gK7K2po', 'dev.itrainyou.heksray.com')">
         Создать чат супервизора
     </button>
 
-    <button onclick="createSupportChat(374, 'eyJ0eXAiOiJKV1QiLCJhbGciOiJIUzI1NiJ9.eyJ1c2VyX2lkIjo2LCJ1c2VybmFtZSI6ImFkbWluQGFkbWluLmFkbWluIiwiZXhwIjoxNjAxNTg1MzkyLCJlbWFpbCI6ImFkbWluQGFkbWluLmFkbWluIiwicGFzc3dvcmRfY2hlY2siOiI0YjMxZTczOWQ2ZDM0NDVkZGQwMDhlYmMwMDkxNzcxNzgzOThlNjBlNzhlNjYzMjYxYjUyN2QxMmI3YjE2OTQ4In0.OpomupR6D6x1QJHB378X6g2FXTkWL5oUuvV3gK7K2po')">
+    <button onclick="createSupportChat(374, 'eyJ0eXAiOiJKV1QiLCJhbGciOiJIUzI1NiJ9.eyJ1c2VyX2lkIjo2LCJ1c2VybmFtZSI6ImFkbWluQGFkbWluLmFkbWluIiwiZXhwIjoxNjAxNTg1MzkyLCJlbWFpbCI6ImFkbWluQGFkbWluLmFkbWluIiwicGFzc3dvcmRfY2hlY2siOiI0YjMxZTczOWQ2ZDM0NDVkZGQwMDhlYmMwMDkxNzcxNzgzOThlNjBlNzhlNjYzMjYxYjUyN2QxMmI3YjE2OTQ4In0.OpomupR6D6x1QJHB378X6g2FXTkWL5oUuvV3gK7K2po', 'dev.itrainyou.heksray.com')">
         Создать чат саппорта
     </button>
 
